--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Kalkulator</string>
     <string name="digit_one">1</string>
     <string name="digit_two">2</string>
@@ -20,4 +20,13 @@
     <string name="coma">.</string>
     <string name="sign_plus_minus">±</string>
     <string name="error_divide_by_0">Dziel. przez 0!</string>
+    <string name="night_mode">Tryb nocny</string>
+    <string name="standard">Standardowy</string>
+    <string name="about">O programie</string>
+    <string name="author_name">Mateusz Sędkowski</string>
+    <string name="index">202290</string>
+    <string name="author" tools:ignore="Typos">Autor: </string>
+    <string name="version_number">1.0.1</string>
+    <string name="version">Wersja: </string>
+    <string name="back">Powrót</string>
 </resources>
