--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,19 @@
     <string name="night_mode">Tryb nocny</string>
     <string name="standard">Standardowy</string>
     <string name="about">O programie</string>
-    <string name="author_name">Mateusz Sędkowski</string>
+    <string name="author_name">Mateusz Sędkowski 202290</string>
     <string name="index">202290</string>
-    <string name="author" tools:ignore="Typos">Autor: </string>
+    <string name="author" tools:ignore="Typos">Autor : </string>
     <string name="version_number">1.0.1</string>
-    <string name="version">Wersja: </string>
+    <string name="version">Wersja : </string>
     <string name="back">Powrót</string>
-    <string name="title_activity_advence_calculator">AdvenceCalculatorActivity</string>
+    <string name="title_activity_advence_calculator">Zaawansowany</string>
+    <string name="sinus">sin</string>
+    <string name="cosinus">cos</string>
+    <string name="tangens">tan</string>
+    <string name="log">log</string>
+    <string name="ln">ln</string>
+    <string name="sqrt">√</string>
+    <string name="pow2">x^2</string>
+    <string name="powX">x^y</string>
 </resources>
